updated weekly progress reports

--- a/Project Hand Off/group49-project_hand_off.tex
+++ b/Project Hand Off/group49-project_hand_off.tex
@@ -910,9 +910,177 @@ Spring: Week 6 & This week we all continued to prepare for the engineering expo 
 
 \subsection* {Shannon Sandy's Blog Posts}
 \begin{longtable} {|p{1.5cm}|p{13.5cm}|} \hline
-Fall: Week 1 & \\ \hline
-Winter: Week 1 & \\ \hline
-Spring: Week 1 & \\ \hline
+Fall: Week 4 & 
+Progress: Our group has set up weekly meetings with Mike Bailey on Tuesdays, directly after our meetings with our TA. We met with our TA this week and discussed how our group can best move forward with our project. Our group also met with Mike Bailey to discuss our first steps for this project. Currently, we're collaborating on a list of what we will need in order to complete the video. This list includes: 3D objects with textures, audio files from the Apollo 11 mission, and details about the mission. We also have created a very rough timeline for our project.
+
+Problems: There were not really any problems that we encountered this week. Our group was unable to meet in person to work on the group problem statement. However, we have been communicating over text regarding which sections we are each working on, so it was not much of a problem for us to complete the paper.
+
+Plans: We plan to meet with Mike Bailey again on Tuesday with the completed list of what we need to complete the video. Our group is also planning on taking a trip this month to the Oregon Museum of Science and Industry to meet with our client, Jim Todd, and better understand what he would like from this video. No later than the beginning of winter term, our group plans to begin developing the video. By the end of January, we plan to have a prototype we can show our client so we can receive feedback\\ \hline
+
+Fall: Week 5 & 
+Progress: Our group was able to meet a couple times in person to work on the requirements document. On Wednesday, we finished a very rough draft of it and were also able to figure out what technologies we were going to do for the technology review. We also met with our TA on Tuesday to discuss what the requirements document should look like and also received guidance for the technology review. Our group also completed a list of what is required to be in the video and sent it to Mike Bailey.
+
+Problems: Mike Bailey was out of town this week, so we were unable to meet with him to further discuss the requirements for the video.
+
+Plans: We plan to proofread our requirements document and send it to our clients before we meet with Mike Bailey on Tuesday. When we meet with Mike Bailey, we also plan to discuss the technologies we should expect to use when creating the Apollo 11 video. \\ \hline
+
+Fall: Week 6 & 
+
+Progress: Our team was able to meet with our TA and Mike Bailey on Tuesday to go over the draft of our requirements doc. After the meetings, we made slight changes to our document that our TA and Mike Bailey suggested we make. This included adding the OSU logo, changing the name of our client for accuracy, and recreating our Gantt chart with Microsoft Project. In class on Tuesday, our group worked collaboratively to create our Team Expectations document. Mike Bailey also said that he would send a copy of our requirements doc to Jim Todd, our client at OMSI, and explain what the document represented. In our meeting with Mike Bailey, each of us went over what technologies we were planning to write about in our technology review.
+
+Problems: There weren't really any problems this week. We were all able to make it to our meetings and worked collaboratively on the requirements doc and team expectations doc.
+
+Plans: On Tuesday, we plan to meet with Mike Bailey and see if Jim Todd was able to get back to him about the requirements doc. We will also inform Mike Bailey of the technologies we decided to use based on our tech reviews. When we meet with our TA on Tuesday, we will go over what future work we should be preparing for. \\ \hline
+
+Fall: Week 7 & 
+Progress: We were able to meet with our TA on Tuesday and received feedback on what we should change for our final requirements document. We also discussed what the design document should be. We sent our revised requirements document draft to Mike Bailey so he can send it to our client, Jim Todd.
+
+Problems: Mike Bailey was unable to meet with us this Tuesday because he had another meeting to attend at that time. Because of this, we were unable to go over what technologies we recommended using as a result of our technology review.
+
+Plans: We plan to meet with Mike Bailey on Tuesday to go over what technologies we recommend using for our project. We will also meet with our TA to update him on our group's progress. We also plan to begin outlining our design document next week. \\ \hline
+
+Fall: Week 8 & 
+Progress: We were able to meet with our TA on Tuesday to discuss the requirements for our design document and progress report. We also discussed how we could more effectively complete these requirements. We were also able to meet with Mike Bailey and discuss what technologies we felt would be the best to use for our project. 
+
+Problems: One of our teammates, Dean, was unable to attend both our meetings with Mike Bailey and our TA. We will have to update him on what we learned about our design document and progress report. We also don't know what 3D modeling technologies he recommended using for our project. We've also had trouble meeting as a group this week because none of our schedules aligned.
+
+Plans: Either this weekend or on Monday, our team will meet to make a rough draft of our design document. While we all meet, we can fill Dean in on the information he missed from Tuesday's meetings. We will also ask him about what technologies he recommends for the 3D modeling in our video. We will also work together to find an accurate flight path of Apollo 11. Before the end of the term, Dean and I will complete 3D scenes that can be implemented in the prototype of our video. My scene will be of Apollo 11's splashdown and Dean's will include a model of the earth and its atmosphere as well the orbital mechanics will we need for out video. \\ \hline
+
+Fall: Week 9 & 
+Progress: Our team was able to meet last week to outline and draft our design document and go over what aspects of the paper each person will work on. We were also able to meet with our TA on Tuesday to clarify some confusions we had with the design document.
+
+Problems: We were unable to meet with Mike Bailey on Tuesday because he had another meeting to attend. It was also hard for our group to meet this week because of the holiday break.
+
+Plans: Our group plans to meet Sunday or Monday so we can finish our design document. We will also begin to outline our progress report as well. On Tuesday, we plan to meet with Mike Bailey to discuss how we plan to move forward with our project and to go over some aspects of our design document. We will also meet with our TA on Tuesday to ask any questions we may have about our progress report. \\ \hline
+
+Winter: Week 1 &
+Progress: Before the term started, our group and Mike Bailey visited OMSI to meet with our client, Jim Todd. We were able to discuss what scenes he wanted in the video and how the planetarium screens will distort the video. We have also set up weekly meetings with Mike Bailey for Fridays. After todays meeting with Mike Bailey, we discussed the story-boarding of the video and contacting NASA to use the 3D models from their Github. We have sent our TA our availability, but have not heard back from him yet.
+
+Problems: We do not know if the planetarium video software can use an OpenGL program. Mike Bailey will be in contact with Skydance, the software company, to receive an answer.
+
+Plans: We plan to set up weekly meetings with our TA. We also plan to begin working on the moon landing scene of our video this week.\\ \hline
+
+Winter: Week 2 & 
+Progress: Our group set up meetings with our TA for Wednesdays. During our meeting this week, we updated him about our meeting with our client and our updated expectations for our project. We also discussed how to prepare for our elevator pitch and poster board display. Our group met Friday to work on our project together. We began setting up the scene for the portion of our video that takes place on the moon. We have also signed up for the Engineering Expo and began work on our poster display draft.
+
+Problems: We were unable to meet with Mike Bailey this week because he was out of town. Our group plans to use 3D models from NASA's Github for our video, but we will need permission from NASA to do so. Since Mike Bailey has a contact from NASA, he was going to help us gain permission to use the models. 
+
+Plans: Our group plans to work together on Monday to finish up the moon scene. We will also work on using videos from the Apollo 11 mission as textures for our video. This will allow us to smoothly transition from actual footage from mission to our 3D video. 
+\\ \hline
+
+Winter: Week 3 &
+
+Progress: Our group has met with our TA on Tuesday to discuss our progress with our video as well as what resources we will need for the Expo. Our group has also met with Mike Bailey on Friday to discuss how to use NASA's 3D models from their Github. We are now able to export these models has .obj files, making it so we can import them into our scene. This Friday, our group has also finished story-boarding our video and decided which scenes the viewer can interact with. Our group has also submitted our draft of our Expo poster.
+
+Problems: Our group still has not heard back from Sky-Skan, the company responsible for the OMSI's planetarium software. So we still do not know if our OpenGL code will be compatible with the planetarium software. If the code is not compatible, we will need to write a script that takes the OpenGL code as input and alters it so it can be run by the planetarium.
+
+Plans: We plan to meet with Mike Bailey next Friday to go over the storyboard of our video. Our group also plans to add NASA's 3D models to our scene and also implement more viewpoints. We also plan to review footage and audio of the Apollo 11 mission so we can see which files are suitable to use in our video.  
+ \\ \hline
+
+Winter: Week 4 &
+Progress: Our team met with our TA to discuss what to expect for our alpha. Our scene has implemented the lunar module and landing site models into our scene and have also added textures for the sun and moon. We have also implemented some of the various viewpoints for video, including the viewpoint from the lunar module. Our team has also met with Mike Bailey, who had a chance to look through our storyboard. Mike Bailey also let us know that Skyskan (the company who created the planetarium's software) has replied to him. Unfortunately, the software will not take an OpenGL file. 
+
+Problems: Our team will have to write a script so our video can be played in the planetarium. Luckily, the scripting language does not look too complex and Jim Todd has experience writing scripts for the planetarium, so we will reach out to him for support.
+
+Plans: We plan to reformat our storyboard as an Excel sheet so we can write down how long each aspect of the video will be and keep track of the run time. We also plan to implement .mtl files to texture the landing site and lunar module objects. Our team plans to meet up next week to work on an alpha for our video.
+\\ \hline
+
+Winter: Week 5 & 
+Progress: We met with our TA on Tuesday to discuss what was expected for our alpha and progress report. Afterwards, our team decided who will do what tasks so our alpha can be completed by Monday of week 7. I will be responsible for implementing the .mtl for our objects. I will also implement a sound file for our video. Our team met with Mike Bailey on Friday to update him on our progress as well as discuss what our alpha will look like. Our team met with team 72 to critique each others' posters on Friday morning.
+
+Problems: Our team has not run into any problems with our project. If it snows this weekend that might prevent our group from working together on the project. However, we would still be able to work on the project individually.
+
+Plans: Our team will keep working on the timing of our storyboard and the tasks that have been assigned to each of us. I will work on implementing OpenAL this week, the audio management library for OpenGL. We will also update our requirements document to better reflect our new requirements.
+\\ \hline
+
+Winter: Week 6 & 
+Progress: Our team has completed our alpha for our project. I have also updated our requirements document to better represent our new requirements for our project. On Wednesday, our team met with our TA to confirm assignment due dates and update him on our project's progress. Our project now has a working audio byte, multiple viewpoints, and all the objects that will be in our video. On Friday, we met with Mike Bailey to update him on our progress. 
+
+Problems: We did not encounter any problems this week. Our team was able to complete each task assigned to them for the completion of our alpha.
+
+Plans: Our group plans to finalize the textures of the objects we retrieved from NASA's Github. We also plan to implement key-frame animation and more audio bytes in our video. We will begin to add historical videos in our project by adding them as 2D textures.
+\\ \hline
+
+Winter: Week 7 & 
+Progress: On Wednesday, our group met with our TA to discuss future due dates and the expectations for our beta and progress reports. Our group has made a list of all the tasks that need to be done for our beta and have started working on them. On Friday, our group met with Mike Bailey to show him our finished alpha and also explain our progress to him. We told him that we will share our progress report with both him and Jim Todd. We also discussed visiting OMSI to show Jim Todd our beta. We are tentatively planning on going to OMSI on the Friday of finals week, if our schedules permit it. Our team also worked together on the progress report draft and finished most of it.
+
+Problems: We have not run into many problems this week. Our group is still figuring out how to implement historical videos into our animation.
+
+Plans: Our group plans to meet with our client either during or after finals week to show him our beta. We also plan to work on the animation, adding more audio, implementing the historical videos, finish texturing objects, and improving lighting.
+\\ \hline
+
+Winter: Week 8 & 
+Progress: Our team met with our TA on Wednesday to update him on our progress and any problems that may arise by the end of the term. Our group also met with Mike Bailey on Friday to update him on our progress and to discuss techniques that may help us with what we are working on. Our group has made progress on the keyframe animations, the textures of our .obj files, making our scene more realistic and correctly scaling the scene.
+
+Problems: Our team has not really run into any problems this week. We have yet to hear from Jim Todd if he will be available to meet at OMSI on the Friday of finals week.
+
+Plans: The lunar surface should be correctly scaled and oriented along with the lunar module, astronaut, and American flag by the end of the weekend. We expect that the texturing of the .mtl files and keyframe animations will be completed soon after. We plan to spend the rest of the term working on adding historical videos and making it so users can break from the default video to view the scene from another viewpoint.
+\\ \hline
+
+Winter: Week 9 & 
+Progress: We met with our TA on Wednesday to update him on our progress and also the problems we have been having with uploading videos as textures. The lunar surface object has been correctly scaled. Our group also met with Mike Bailey on Friday to update him on our progress and what we plan to do in the future. The flag has been textured and added to the scene, so all of our objects are now in the scene.
+
+Problems: We are still having problems implementing videos as textures. We are currently looking for new solutions on how to execute this function.
+
+Plans: With the lunar surface correctly scaled, we can focus on implementing it on the moon texture. When the user zooms in close enough, the lunar surface will be loaded on top of the moon and will be alpha-masked to blend in with the moon texture. We also plan to make the Earth look like it has clouds by implementing a fragment shader to add white noise to the Earth texture. The texture for the lunar module is close to being complete as well as the basic keyframe animation code. Once the keyframe animation code is complete, we will add multiple viewpoints to create our default animation. 
+\\ \hline
+
+Winter: Week 10 & 
+Progress: Our team met with our TA on Wednesday to update him on our progress. We also met with Mike Bailey to demo our progress. So far, we have implemented keyframe animation, a mini map of the flight path to the moon, a more realistic looking Earth, animation of the lunar module landing, and have implemented more viewpoint and audio files that play during the scene.
+
+Problems: We plan to meet with our client on Friday. Unfortunately, that means receiving feedback on the progress of our project after the beta has been finished.
+
+Plans: We plan to implement a couple more viewpoints, more keyframe animations, and higher quality objects and textures.
+\\ \hline
+
+Spring: Week 1 &
+Progress: Our group has set up weekly meetings with Mike Bailey for Fridays. We met with him today to update him on our progress and plans with the project as well as the timeline for Spring Term. We have reached out to our TA to set up weekly meeting with him. Our group is also working to set up a time where we can all meet and work on the project together.
+
+Problems: We have not run into any problems at this time.
+
+Plans: We plan to continue working on our project this weekend and next week so it will be Expo-ready by the code freeze. We also plan to send our updated documentation and poster to our client for verification. 
+\\ \hline
+
+Spring: Week 2 & 
+Progress: Our team has made progress with the keyframe animations for our project. We have also updated our requirements documents to send to our client on Monday. We met with our TA today to discuss what is required of us for this next week.
+
+Problems: Mike Bailey was unable to meet with us this week. Unfortunately, we were expecting to receive his higher-quality texture for the lunar module, so the lunar module's texture has not been applied yet.
+
+Plans: Our group plans to animate the flight path, add more keyframe animations, and add more audio clips from the Apollo 11 mission. After these are implemented, we will have fulfilled our requirements for our project.
+\\ \hline
+
+Spring: Week 3 & 
+Progress: Our team has completed everything we needed for the code freeze. We met with Mike Bailey on Friday to discuss what we have left to finish. We have finished our final version of our documentation and are still waiting for our client to verify them. We have made some edits to our expo poster.
+
+Problems: We have not run into many problems this week. Our client has yet to verify our documents that we sent him last Saturday.
+
+Plans: We plan to have the updated lunar module texture by the end of this weekend. I plan to work more on the alpha-masking for the landing site model and edit some audio files so they are not as long. Once the alpha-mask is finished, I will add an animation where the camera zooms in on the landing site. Our group plans to animate the flight path and add a default animation that explores the lunar surface.
+\\ \hline
+
+Spring: Week 4 & 
+Progress: Our team has finished our poster for expo. We met with Mike Bailey on Friday to show him the progress on the flight path animation. The flight path now includes the return path Apollo 11 made back to Earth. We figured out that the landing site texture keys off X,Y coordinates instead of the S,T coordinates we were originally using. 
+
+Problems: So far the only problem we have encountered is that we have not yet received the lunar module texture. We plan to receive it in the coming week.
+
+Plans: I plan to edit the lunar module landing animations so they are more accurate to how the landing looked. I also plan to keep working on the alpha-mask of the landing site object. I will be cutting the audio clips down in length and also making it so they do not play during when the user switches scenes. Johnathan plans to edit the flight path so it does not rotate with the moon. Dean plans to edit the keyframe animation so the motion is smoother and less jumpy.  
+\\ \hline
+
+Spring: Week 5 & 
+Progress: We met with our TA on Friday to discuss what to expect at Expo and what our booth needs to be ready. Our group also met with Mike Bailey to update him on our progress. The alpha mask for the landing site has been implemented and I have made it so the audio clips stop playing when the user changes scenes. Our poster and model release forms have been turned in.
+
+Problems: We have not run into any problems this week!
+
+Plans: Each team member plans to work on a key-frame animation scene. We plan to have them done a week before Expo so we are not rushing to finish them. After that, we will implement the higher quality texture for the lunar module.
+\\ \hline
+
+Spring: Week 6 & 
+Progress: I have made the lunar module more accurate to how it actually happened. Dean and Jonathan had a meeting with Mike to update him on our progress and fill him in on the details about Expo. I was unable to make this meeting because I had a lab to attend for another class.
+
+Problems: We have not run into any problems this week.
+
+Plans: We plan to meet tomorrow morning to work on finishing the final details of the project. Dean will work on the default animation, Jonathan will work on animating the flight path, and I will trim down the excess audio and work on the landing site masking.
+\\ \hline
+
 \end{longtable}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
